# kubeaid-cli-oxidized

./: Cargo.toml  rustfmt.toml
crates/config/: Cargo.toml
crates/config/examples/: wizard.rs
crates/config/src/: hydrated.rs  lib.rs  raw.rs
crates/prompt/: Cargo.toml
crates/prompt-derive/: Cargo.toml
crates/prompt-derive/src/: lib.rs
crates/prompt-ratatui/: Cargo.toml
crates/prompt-ratatui/src/: lib.rs
crates/prompt/src/: lib.rs
